--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.1",
     "next": "13.1.6",
     "nprogress": "0.2.0",
