--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "material-kit-react-customize-by-amit-solanki",
   "version": "3.0.0",
   "author": "Devias",
-  "licence": "MIT",
+  "license": "MIT",
   "homepage": "",
   "private": false,
   "scripts": {
